src/test/ui/parser/attr-dangling-in-mod.stderr
error: expected item after attributes
  --> $DIR/attr-dangling-in-mod.rs:6:14
   |
LL | #[foo = "bar"]
   |              ^

error: aborting due to previous error

